mention dry-run and changelist in update

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 0.7:
 - added "checkout" command for creating workspace
 - removed creating workspace functionality from "update"
+- "update" now accepts "--dry-run" and "@changelist" arguments
 - "reconcile" provides alternatives: revert edited/deleted, remove added
 - stopped using posix bintools, can now theoretically work on Windows
 - added unit tests
